--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
 <head>
 <link href="animate.css" rel="stylesheet" type="text/css">
-
-
 </head>
 <body>
-<header class="header" id="header"><!--header-start-->
 
-        <h1 class="animated fadeInDown delay-07s">Welcome To Knight Studios</h1>
+
+        <h1 class="animated fadeInDown delay-07s">This is a Title</h1>
         <ul class="we-create animated fadeInUp delay-1s">
         	<li>We are a digital agency that loves crafting beautiful websites.</li>
         </ul>
-            <a class="link animated fadeInUp delay-1s" href="#">Get Started</a>
-</header><!--header-end-->
+            <a class="link animated fadeInUp delay-1s" href="#">Fall Down the stairs</a>
+
+
 </body>
 </html>
