--- a/index.html
+++ b/index.html
@@ -3,14 +3,56 @@
 <head>
 <link href="animate.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body style="text-align:center">
 
 
-        <h1 class="animated fadeInDown delay-07s">This is a Title</h1>
-        <ul class="we-create animated fadeInUp delay-1s">
-        	<li>We are a digital agency that loves crafting beautiful websites.</li>
-        </ul>
-            <a class="link animated fadeInUp delay-1s" href="#">Fall Down the stairs</a>
+<h1 class="animated fadeInDown delay-07s">This h1 fades down</h1>
+
+<hr> 
+
+<br> 
+
+<br>
+
+
+<p class="animated fadeInUp delay-02s"> This has a delay of 02s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-03s"> This has a delay of 03s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-04s"> This has a delay of 04s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-05s"> This has a delay of 05s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-06s"> This has a delay of 06s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-07s"> This has a delay of 07s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-08s"> This has a delay of 08s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-09s"> This has a delay of 09s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-1s"> This has a delay of 1s </p> 
+
+<br>
+
+<p class="animated fadeInUp delay-12s"> This has a delay of 1.2s </p> 
+
 
 
 </body>
